--- a/articles/cognitive-services/QnAMaker/toc.yml
+++ b/articles/cognitive-services/QnAMaker/toc.yml
@@ -79,37 +79,40 @@
       displayName: 'metadata, pair, sharepoint, authentication, permissions, faq, pdf, excel, xls, rtf, html, txt, tsv, url, end of line, new line, carriage return, markdown, commonmark, format, standard'
 - name: Handleidingen
   items:
+    - name: Knowledge base bewerken
+      items:
+        - name: Een knowledge base bewerken
+          href: How-To/edit-knowledge-base.md
+        - name: Gesprekken met meerdere beurten maken met vervolgvragen
+          href: How-To/multiturn-conversation.md
+          displayName: 'multi-turn dialogs, parent question, child question, filtering, metadata, state, context, prompt, follow-up, followup, flow, conversation, previous question'
+        - name: Chit-chat toevoegen
+          href: How-to/chit-chat-knowledge-base.md
+        - name: Een beveiligd Sharepoint-bestand toevoegen
+          href: How-To/add-sharepoint-datasources.md
+          displayName: 'Sharepoint, secure, AAD, azure directory, admin, permission, authorization, file, authentication'
     - name: Knowledge base beheren
       items:
         - name: Een knowledge base maken
           href: Quickstarts/create-publish-knowledge-base.md
           displayName: 'create bot, bot, publish to bot, test, edit'
-        - name: Heen-en-weergepraat toevoegen aan knowledge base
-          href: How-to/chit-chat-knowledge-base.md
-        - name: Een knowledge base migreren
-          href: Tutorials/migrate-knowledge-base.md
-        - name: Een knowledge base bewerken
-          href: How-To/edit-knowledge-base.md
-          displayName: 'metadata, pair'
-        - name: Een beveiligd Sharepoint-bestand toevoegen
-          href: How-To/add-sharepoint-datasources.md
-          displayName: 'Sharepoint, secure, AAD, azure directory, admin, permission, authorization, file, authentication'
-        - name: Samenwerken aan een knowledge base
-          href: How-To/collaborate-knowledge-base.md
+        - name: Antwoord ophalen
+          href: How-To/metadata-generateanswer-usage.md
+          displayName: 'isTest, test, route, request, http, post, body, header, json, metadata, top, strictFilters, GenerateAnswer, API, answer'
+        - name: Een bot maken met een ingeschakelde knowledge base
+          href: Tutorials/integrate-qnamaker-luis.md
         - name: Een knowledge base maken in een andere taal
           href: How-To/language-knowledge-base.md
+        - name: Een knowledge base migreren
+          href: Tutorials/migrate-knowledge-base.md
+          displayName: 'metadata, pair'
+        - name: Samenwerken aan een knowledge base
+          href: How-To/collaborate-knowledge-base.md
         - name: Een knowledge base testen
           href: How-To/test-knowledge-base.md
         - name: Actief leren gebruiken om uw knowledge base te verbeteren
           href: How-to/improve-knowledge-base.md
           displayName: 'active learning, suggestion, dialog prompt, train api, feedback loop, autolearn, auto-learn, user setting, service setting, services setting, accept, reject, filter by suggestion, filter active learning'
-    - name: Knowledge base gebruiken
-      items:
-        - name: Metagegevens gebruiken met GenerateAnswer-API
-          href: How-To/metadata-generateanswer-usage.md
-          displayName: 'isTest, test, route, request, http, post, body, header, json, metadata, top, strictFilters'
-        - name: Met een bot
-          href: Tutorials/integrate-qnamaker-luis.md
     - name: Services beheren
       items:
         - name: Een QnA Maker-service instellen
@@ -154,7 +157,7 @@
     - name: Voorbeelden
       items:
         - name: QnA Maker-helpbot
-          href: 'https://github.com/Microsoft/BotBuilder-Samples/tree/master/experimental/csharp_dotnetcore/qnamaker-support-bot'
+          href: 'https://aka.ms/qnamakerhelpbotsample'
     - name: SDK's
       items:
         - name: 'C#'
