--- a/articles/governance/resource-graph/toc.yml
+++ b/articles/governance/resource-graph/toc.yml
@@ -3,7 +3,7 @@
 - name: Overzicht
   items:
     - name: Overzicht van Azure Resource Graph
-      displayName: 'resource manager, query language, rbac, permissions'
+      displayName: 'Resource Manager, query language, rbac, permissions'
       href: overview.md
 - name: Snelstartgidsen
   expanded: true
@@ -48,12 +48,24 @@
       href: /powershell/module/az.resourcegraph/
     - name: Azure-SDK voor .NET
       href: /dotnet/api/Microsoft.Azure.Management.ResourceGraph
+    - name: Azure SDK voor .NET (NuGet)
+      href: 'https://www.nuget.org/packages/Microsoft.Azure.Management.ResourceGraph/'
+    - name: Azure SDK voor Go
+      href: 'https://godoc.org/github.com/Azure/azure-sdk-for-go/services/resourcegraph/mgmt/2019-04-01/resourcegraph'
+    - name: Azure SDK voor Java
+      href: /java/api/overview/azure/resourcegraph/management?view=azure-java-stable
+    - name: Azure SDK voor Java (Maven)
+      href: 'https://search.maven.org/artifact/com.microsoft.azure.resourcegraph.v2019_04_01/azure-mgmt-resourcegraph/1.0.0-beta/jar'
+    - name: Azure SDK voor Node
+      href: /javascript/api/@azure/arm-resourcegraph
     - name: Azure-SDK voor Python
       href: /python/api/azure-mgmt-resourcegraph/azure.mgmt.resourcegraph
+    - name: Azure SDK voor Ruby (Gem)
+      href: 'https://rubygems.org/gems/azure_mgmt_resourcegraph'
     - name: REST
       href: /rest/api/azureresourcegraph/resources/resources
     - name: OpenAPI
-      href: 'https://github.com/Azure/azure-rest-api-specs/tree/master/specification/resourcegraph/resource-manager/Microsoft.ResourceGraph/preview/2018-09-01-preview'
+      href: 'https://github.com/Azure/azure-rest-api-specs/tree/master/specification/resourcegraph/resource-manager/Microsoft.ResourceGraph/stable/2019-04-01'
 - name: Resources
   items:
     - name: Azure-roadmap
@@ -61,6 +73,6 @@
     - name: Prijscalculator
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: UserVoice
-      href: 'https://feedback.azure.com/forums/915958-azure-governance'
+      href: 'https://feedback.azure.com/forums/915958-azure-governance?category_id=345061'
     - name: YouTube-kanaal Governance
       href: 'https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ'
