--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -109,8 +109,14 @@
           href: how-to-install-iot-edge-linux-arm.md
         - name: Windows X64
           href: how-to-install-iot-edge-windows.md
+        - name: Linux-containers in Windows X64
+          href: how-to-install-iot-edge-windows-with-linux.md
+        - name: Windows Server-VM
+          href: how-to-install-iot-edge-windows-server-vm.md
         - name: Ubuntu-VM
           href: how-to-install-iot-edge-ubuntuvm.md
+        - name: Kubernetes
+          href: how-to-install-iot-edge-kubernetes.md
         - name: Runtime-versie bijwerken
           href: how-to-update-iot-edge.md
     - name: Automatisch inrichten met DPS
