--- a/articles/postgresql/index.yml
+++ b/articles/postgresql/index.yml
@@ -9,9 +9,9 @@ metadata:
   ms.author: raagyema
   ms.service: postgresql
   ms.topic: landing-page
-  ms.date: 02/25/2019
+  ms.date: 04/26/2019
 abstract:
-  description: 'Azure Database for PostgreSQL is een relationele databaseservice op basis van de open-source PostgreSQL-database-engine.  Deze volledig beheerde Database as a Service kan bedrijfskritieke workloads verwerken met voorspelbare prestaties, beveiliging, hoge beschikbaarheid en dynamische schaalbaarheid.  Ontwikkel toepassingen met Azure Database for PostgreSQL met behulp van open-source hulpprogramma''s en een platform naar keuze.  Ontdek met onze snelstartgidsen, zelfstudies en voorbeelden hoe u Azure Database voor PostgreSQL gebruikt.'
+  description: 'Azure Database for PostgreSQL is een relationele databaseservice op basis van de open-source PostgreSQL-database-engine.  Deze volledig beheerde Database as a Service kan bedrijfskritieke workloads verwerken met voorspelbare prestaties, beveiliging, hoge beschikbaarheid en dynamische schaalbaarheid. De service is beschikbaar in twee implementatieopties: enkele server en Hyperscale (Citus) (preview). De optie Hyperscale (Citus) schaalt query''s horizontaal op meerdere machines met behulp van sharding en is geschikt voor toepassingen die betere schaalbaarheid en prestaties vereisen. Ontdek met onze snelstartgidsen, zelfstudies en voorbeelden hoe u Azure Database voor PostgreSQL gebruikt.'
 sections:
   - title: QuickStarts van vijf minuten
     items:
@@ -22,22 +22,33 @@ sections:
         items:
           - image:
               src: 'https://docs.microsoft.com/azure/sql-database/media/index/portal.svg'
-            text: Azure-portal
+            text: Enkele server via Azure-portal
             href: /azure/postgresql/quickstart-create-server-database-portal
           - image:
               src: 'https://docs.microsoft.com/azure/sql-database/media/index/cli.svg'
-            text: Azure-CLI
+            text: Enkele server via Azure-CLI
             href: /azure/postgresql/quickstart-create-server-database-azure-cli
+          - image:
+              src: 'https://docs.microsoft.com/azure/sql-database/media/index/portal.svg'
+            text: Hyperscale (Citus) via Azure-portal
+            href: /azure/postgresql/quickstart-create-hyperscale-portal
   - title: Zelfstudies met stapsgewijze instructies
     items:
       - type: paragraph
-        text: 'Leer hoe u het volgende doet:'
+        text: 'Voor enkele server:'
       - type: list
         style: ordered
         items:
           - html: 'Een database ontwerpen: <a href="/azure/postgresql/tutorial-design-database-using-azure-portal">Azure Portal</a> | <a href="/azure/postgresql/tutorial-design-database-using-azure-cli">Azure CLI</a>'
           - html: <a href="/azure/app-service/containers/tutorial-python-postgresql-app?toc=%2fazure%2fpostgresql%2ftoc.json">Een webtoepassing maken met Python en de CLI</a>
           - html: <a href="/azure/postgresql/tutorial-monitor-and-tune">De service controleren en afstemmen</a>
+      - type: paragraph
+        text: 'Voor Hyperscale (Citus) (preview):'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/postgresql/tutorial-design-database-hyperscale-multi-tenant">Een multitenant-database ontwerpen</a>
+          - html: <a href="/azure/postgresql/tutorial-design-database-hyperscale-realtime">Een realtime-database ontwerpen</a>
   - title: Uw vaardigheden ontwikkelen met Microsoft Learn
     items:
       - type: list
