--- a/articles/virtual-machine-scale-sets/TOC.yml
+++ b/articles/virtual-machine-scale-sets/TOC.yml
@@ -129,6 +129,8 @@
         - name: Prestaties van Premium Storage
           href: ../virtual-machines/windows/premium-storage-performance.md
           maintainContext: true
+        - name: Kortstondige besturingssysteemschijven
+          href: ephemeral-os-disks.md
         - name: Schaalbaarheidsdoelen voor schijven
           href: ../virtual-machines/windows/disk-scalability-targets.md
           maintainContext: true
@@ -204,7 +206,7 @@
               href: virtual-machine-scale-sets-encrypt-disks-ps.md
             - name: Azure CLI gebruiken
               href: virtual-machine-scale-sets-encrypt-disks-cli.md
-            - name: Schijfversleuteling met extensievolgorde
+            - name: Extensievolgorde
               href: ../security/azure-security-disk-encryption-extension-sequencing.md
               maintainContext: true
         - name: Met grote schaalsets werken
@@ -221,13 +223,16 @@
               href: virtual-machine-scale-sets-manage-cli.md
             - name: Azure PowerShell gebruiken
               href: virtual-machine-scale-sets-manage-powershell.md
-        - name: Galerieën met gedeelde installatiekopieën (preview)
-          href: shared-image-galleries.md
+        - name: Gedeelde installatiekopiegalerieën
           items:
+            - name: Overzicht
+              href: shared-image-galleries.md
             - name: CLI
               href: shared-images-cli.md
             - name: PowerShell
               href: shared-images-powershell.md
+            - name: Installatiekopieën tussen tenants delen
+              href: share-images-across-tenants.md
             - name: Problemen met gedeelde installatiekopieën oplossen
               href: troubleshooting-shared-images.md
         - name: Verticaal schalen in een schaalset
